--- a/app/views/refinery/admin/pages/tabs/_images_field.html.erb
+++ b/app/views/refinery/admin/pages/tabs/_images_field.html.erb
@@ -15,6 +15,13 @@
                               :class => 'page_caption' %>
           </div>
         <% end %>
+        <% if Refinery::PageImages.oembed %>
+          <%= text_field_tag "#{f.object_name.demodulize}[images_attributes][#{index}][oembed_url]",
+                            f.object.oembed_url_for_image_index(index),
+                            :id => "page_oembed_url_#{index}",
+                            :style => 'width: 135px',
+                            :class => 'page_oembed_url' %>
+        <% end %>
       </li>
     <% end %>
     <li class='empty'>
