--- a/app/assets/javascripts/refinery/page-image-picker.js.erb
+++ b/app/assets/javascripts/refinery/page-image-picker.js.erb
@@ -107,14 +107,27 @@ open_image_caption = function(e) {
   textarea = list_item.find('.textarea_wrapper_for_wym > textarea');
 
   textarea.after($("<div class='form-actions'><div class='form-actions-left'><a class='button'><%= I18n.t('refinery.js.admin.page_images.done') %></a></div></div>"));
+  console.log(textarea.parent());
+  /*
+    This seems to, for the actively selected image, take the
+    'textarea_wrapper_for_wym' and turn it into a modal, and then drop it back
+    onto the page when finished. So instead of showing/building a new page
+    region it turns an existing one into a modal.  Therefore, need to add the
+    fields into the existing area but hide them (Type="hidden") until
+    modalised.
+  */
   textarea.parent().dialog({
      title: "<%= I18n.t('refinery.js.admin.page_images.add_caption') %>"
      , modal: true
      , resizable: false
      , autoOpen: true
      , width: 928
-     , height: 530
-   });
+     , height: 730
+  });
+
+  $(textarea.parent()).find('.hidden_fields_for_caption').show();
+  $(textarea.parent()).find('.initially_hidden').show();
+  console.log($(textarea.parent()).find('hidden_fields_for_caption'));
 
   $('.ui-dialog:visible .ui-dialog-titlebar-close, .ui-dialog:visible .form-actions a.button')
     .on('click',
@@ -128,6 +141,7 @@ open_image_caption = function(e) {
         $this_parent.appendTo('li.current_caption_list_item').dialog('close').data('dialog', null);
         $this_parent.find('.form-actions').remove();
         $this_parent.find('.wym_box').remove();
+        $this_parent.find('.initially_hidden').hide();
         $this_parent.css('height', 'auto');
         $this_parent.removeClass('ui-dialog-content').removeClass('ui-widget-content');
 
